# ShelfScore

./: .gitignore  pyproject.toml  start.sh
shelf/: README.md  index.html  nx.json  package-lock.json  package.json  pnpm-lock.yaml  project.json  vite.config.ts
shelf/src/: main.tsx  styles.scss
shelf/src/app/: app.module.scss  app.spec.tsx  app.tsx  nx-welcome.tsx
shelf/src/components/author/: author.module.scss  author.tsx
shelf/src/components/authors/: authors.module.scss  authors.tsx
shelf/src/components/book/: book.tsx
shelf/src/components/books/: books.tsx
shelf/src/components/home/: home.tsx
shelf/src/components/login/: login.module.scss  login.tsx
shelf/src/components/navbar/: navbar.module.scss  navbar.tsx
shelf/src/components/paginated-list/: PaginatedList.module.scss  PaginatedList.spec.tsx  PaginatedList.tsx
shelf/src/components/profile/: profile.module.scss  profile.tsx
shelf/src/components/register/: register.module.scss  register.tsx
src/app/: alembic_models.py  container.py  db.py  main.py  main_routes.py
src/app/alembic/: env.py
src/app/migrations/: env.py
src/app/models/: author.py  book.py  review.py  user.py
src/app/repositories/: auth.py  author.py  book.py  review.py  user.py
src/app/routes/: author.py  book.py  review.py  user.py
src/app/schemas/: author.py  book.py  review.py  user.py
src/app/services/: auth.py  author.py  book.py  image.py  review.py  user.py
src/app/utils/: current_user.py
src/shelf-front/: README.md  index.html  nx.json  package-lock.json  package.json  project.json  vite.config.ts
(+5 files in other folders)
